language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_public_function.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  0\n}"
---
|
pub fn main() {
  0
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
main
  kind:   Function
  detail: fn() -> Int
  sort:   2_main
  desc:   app
  edits:
    [1:0-1:0]: "main"
