language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_public_function_with_documentation.snap
---
source: language-server/src/tests/completion.rs
expression: "\n/// Hello\npub fn main() {\n  0\n}"
---
|
/// Hello
pub fn main() {
  0
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
main
  kind:   Function
  detail: fn() -> Int
  sort:   3_main
  desc:   app
  docs:   " Hello\n"
  edits:
    [1:0-1:0]: "main"
