language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_public_record_with_documentation.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub type Box {\n  Box(Int, Int, Float)\n}\n"
---
|
pub type Box {
  Box(Int, Int, Float)
}


----- Completion content -----
Box
  kind:   Constructor
  detail: fn(Int, Int, Float) -> Box
  sort:   3_Box
  desc:   app
  edits:
    [1:0-1:0]: "Box"
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
