language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main(wibble: Int) {\n  let wobble = 1\n  w\n\n  let wabble = 2\n}\n"
---

pub fn main(wibble: Int) {
  let wobble = 1
  w|

  let wabble = 2
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
main
  kind:   Function
  detail: fn(Int) -> Int
  sort:   3_main
  desc:   app
  edits:
    [3:2-3:3]: "main"
wibble
  kind:   Variable
  detail: Int
  sort:   3_wibble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:2-3:3]: "wibble"
wobble
  kind:   Variable
  detail: Int
  sort:   3_wobble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:2-3:3]: "wobble"
