language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_anonymous_function.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  let add_one = fn(wibble: Int) { wibble + 1 }\n  add_one(1)\n}\n"
---

pub fn main() {
  let add_one = fn(wibble: Int) { wibble| + 1 }
  add_one(1)
}


----- Completion content -----
main
  kind:   Function
  detail: fn() -> Int
  sort:   03_main
  desc:   app
  edits:
    [2:34-2:40]: "main"
wibble
  kind:   Variable
  detail: Int
  sort:   03_wibble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [2:34-2:40]: "wibble"
