language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_as.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn wibble() {\n  let b as c = 5\n\n}\n"
---

fn wibble() {
  let b as c = 5
|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
b
  kind:   Variable
  detail: Int
  sort:   3_b
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "b"
c
  kind:   Variable
  detail: Int
  sort:   3_c
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "c"
wibble
  kind:   Function
  detail: fn() -> Int
  sort:   3_wibble
  desc:   app
  edits:
    [3:0-3:0]: "wibble"
