language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_bit_array.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn wibble() {\n  let assert <<h:1>> as i = <<1:1>>\n\n}\n"
---

fn wibble() {
  let assert <<h:1>> as i = <<1:1>>
|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
h
  kind:   Variable
  detail: Int
  sort:   3_h
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "h"
i
  kind:   Variable
  detail: BitArray
  sort:   3_i
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "i"
wibble
  kind:   Function
  detail: fn() -> BitArray
  sort:   3_wibble
  desc:   app
  edits:
    [3:0-3:0]: "wibble"
