language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_case_expression.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  case True {\n    True as wibble -> { todo }\n    False -> { todo }\n  }\n}\n"
---

pub fn main() {
  case True {
    True as wibble -> { t|odo }
    False -> { todo }
  }
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
main
  kind:   Function
  detail: fn() -> a
  sort:   3_main
  desc:   app
  edits:
    [3:24-3:25]: "main"
todo
  kind:   Keyword
  sort:   00_todo
  edits:
    [3:24-3:28]: "todo"
wibble
  kind:   Variable
  detail: Bool
  sort:   3_wibble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:24-3:28]: "wibble"
