language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_ignore_anonymous_function_args.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  let add_one = fn(wibble: Int) { wibble + 1 }\n  let wobble = 1\n  w\n}\n"
---

pub fn main() {
  let add_one = fn(wibble: Int) { wibble + 1 }
  let wobble = 1
  w|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
add_one
  kind:   Variable
  detail: fn(Int) -> Int
  sort:   3_add_one
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:2-4:3]: "add_one"
main
  kind:   Function
  detail: fn() -> a
  sort:   3_main
  desc:   app
  edits:
    [4:2-4:3]: "main"
wobble
  kind:   Variable
  detail: Int
  sort:   3_wobble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:2-4:3]: "wobble"
